--- a/siamese_network/One-Shot-Learning-with-Siamese-Networks/Generate Frozen Graph.ipynb
+++ b/siamese_network/One-Shot-Learning-with-Siamese-Networks/Generate Frozen Graph.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "import os\n",
@@ -76,34 +84,6 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "def initialize_weights(shape, name=None):\n",
-    "    \"\"\"\n",
-    "        The paper, http://www.cs.utoronto.ca/~gkoch/files/msc-thesis.pdf\n",
-    "        suggests to initialize CNN layer weights with mean as 0.0 and standard deviation of 0.01\n",
-    "    \"\"\"\n",
-    "    return np.random.normal(loc = 0.0, scale = 1e-2, size = shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def initialize_bias(shape, name=None):\n",
-    "    \"\"\"\n",
-    "        The paper, http://www.cs.utoronto.ca/~gkoch/files/msc-thesis.pdf\n",
-    "        suggests to initialize CNN layer bias with mean as 0.5 and standard deviation of 0.01\n",
-    "    \"\"\"\n",
-    "    return np.random.normal(loc = 0.5, scale = 1e-2, size = shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -122,11 +102,18 @@
     "\n",
     "# load json and create model\n",
     "json_file = open(os.path.join(json_path,'model.json'), 'r')\n",
+    "\n",
     "loaded_model_json = json_file.read()\n",
     "json_file.close()\n",
+    "\n",
+    "# Remove initialize_weight and initialize_bias\n",
+    "loaded_model_json = loaded_model_json.replace( '\"initialize_weights\"','\"random_uniform\"')\n",
+    "loaded_model_json = loaded_model_json.replace( '\"initialize_bias\"','\"zeros\"')\n",
+    "\n",
+    "\n",
     "loaded_model = model_from_json(loaded_model_json)\n",
     "# load weights into new model\n",
-    "loaded_model.load_weights(os.path.join(model_path, \"weights.50.h5\"))\n",
+    "loaded_model.load_weights(os.path.join(model_path, \"weights.290.h5\"))\n",
     "print(\"Loaded model from disk\")\n",
     "\n",
     "optimizer = Adam(lr = 0.00006)\n",
@@ -135,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +145,7 @@
        "'./../01_frozen/model.pb'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
